search bar functional + css adjustments to avoid overflow

--- a/reviewHub/src/App.css
+++ b/reviewHub/src/App.css
@@ -4,13 +4,14 @@
   height: 30px;
   top: 0;
   left: 0;
-  background-color: rgb(102, 10, 206);
+  background-color: rgb(47, 23, 136);
   color: #1f1f1f;
 
   display: flex;
   justify-content: space-around;
   padding: 20px;
 }
+
 .createPage {
   display: flex;
   justify-content: center;
@@ -54,7 +55,7 @@ input.headerAssets
   text-align: center;
   width: 50%;
   border-radius: 20px;
-  background-color: #ffffff;
+  background-color: #1f1f1f;
   padding: 10px;
 
 
@@ -93,6 +94,9 @@ input.headerAssets
 #contentInput {
   padding: 5px;
   margin-top: 10px;
+  max-width: 80%;
+  width: 80%;
+  overflow: auto;
 }
 .readPage
 {
