--- a/reviewHub/src/index.css
+++ b/reviewHub/src/index.css
@@ -16,7 +16,7 @@
 
 a {
   font-weight: 500;
-  color: #c7c7c7;
+  color: rgb(82, 41, 41);
   text-decoration: inherit;
 }
 a:hover {
